--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
   color: #6F3E20;
 }
 
+.banner-consulta-particular {
+  background-color: white;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900;
+  font-size: 1.25rem;
+  text-align: center;
+  padding: .5rem;
+}
+
 header {
   background-color: #F6E9DD;
   color: #6F3E20;
@@ -174,7 +183,7 @@ nav a:hover {
   border-radius: 50%;
 }
 
-.especialidades, .sobre, .faq, .produtos-digitais, .contato {
+.especialidades, .sobre, .metodo, .faq, .produtos-digitais, .contato {
   padding: 4rem 2rem;
   text-align: center;
   max-width: 70%;
@@ -183,7 +192,7 @@ nav a:hover {
   font-family: 'Montserrat', sans-serif;
 }
 
-.especialidades h2, .sobre h2, .depoimentos h2, .faq h2, .produtos-digitais h2, .contato h2 {
+.especialidades h2, .sobre h2, .metodo h2, .depoimentos h2, .faq h2, .produtos-digitais h2, .contato h2 {
   margin-bottom: 2rem;
   font-size: 2rem;
   color: #6F3E20;
@@ -253,6 +262,7 @@ nav a:hover {
   text-align: center;
   padding-top: 1rem;
   padding-bottom: 1rem;
+  font-weight: 900;
 }
 
 .sobre {
@@ -268,6 +278,48 @@ nav a:hover {
 .sobre .texto {
   flex: 1;
   min-width: 280px;
+}
+
+.metodo h2 {
+  margin-bottom: 1rem;
+}
+
+.metodo p {
+  margin-bottom: 2rem;
+}
+
+.metodos {
+  display: flex; 
+  flex-wrap: wrap; 
+  justify-content: center; 
+  gap: 20px; 
+  max-width: 900px; 
+  margin: 0 auto;
+}
+
+.metodo-container {
+  background-color: #fff; 
+  padding: 20px; 
+  border-radius: 12px; 
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1); 
+  width: 280px;
+}
+
+.metodo-numero {
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.metodo-descricao {
+  color: #555;
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+.metodo-titulo {
+  color: #333;
+  font-size: 20px;
+  margin: 15px 0 10px;
 }
 
 .cursive-name {
@@ -393,7 +445,7 @@ nav a:hover {
   gap: 20px;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 40px 0;
+  padding: 2.5rem 0;
 }
 
 .produto-card {
@@ -494,6 +546,7 @@ nav a:hover {
   position: fixed;
   right: 2rem;
   bottom: 2rem;
+  z-index: 10;
 }
 
 .fixed-wpp a img {
@@ -505,6 +558,34 @@ footer {
   color: black;
   text-align: center;
   padding: 1rem;
+  position: relative;
+}
+
+footer p {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  width: max-content;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+footer span {
+  position: absolute;
+  right: 25px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+footer span a {
+  color: #6F3E20;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1rem;
+  transition: color 0.3s;
+  vertical-align: middle;
 }
 
 .sobre {
@@ -531,29 +612,16 @@ footer {
   .hero {
     padding: 2rem 4rem;
   }
+
+  .logo {
+    font-size: 1.3rem;
+  }
 }
 
 @media (max-width: 1280px) {
   header {
     justify-content: center;
-  }
-
-  .produtos-digitais {
-    padding: 4rem 0;
-  }
-}
-
-@media (max-width: 1024px) {
-  header {
     padding: 2rem 2rem;
-  }
-
-  nav ul {
-    gap: 1.25rem;
-  }
-
-  .shrink {
-    padding: 1.5rem 0;
   }
 
   .hero {
@@ -565,7 +633,7 @@ footer {
   }
 
   .hero .text {
-    max-width: 40%;
+    max-width: 45%;
     text-align: start;
   }
 
@@ -578,12 +646,30 @@ footer {
     max-width: 100%;
   }
 
-  .especialidades p {
-    text-align: start;
+  .produtos-digitais {
+    padding: 4rem 0;
+  }
+}
+
+@media (max-width: 1024px) {
+  header {
+    padding: 2rem 2rem;
   }
 
-  #cta-text {
-    text-align: center;
+  nav ul li {
+    display: none;
+  }
+
+  .hero .text {
+    max-width: 75%;
+  }
+
+  .hero .image img {
+    display: none
+  }
+  
+  .shrink {
+    padding: 1.5rem 0;
   }
 
   .card p {
@@ -598,17 +684,25 @@ footer {
   .sobre .texto p {
     text-align: start;
   }
+
+  footer {
+    position: static;
+  }
+
+  footer p {
+    position: static;
+    transform: translateX(0);
+    width: 100%;
+  }
+
+  footer span {
+    position: static;
+    transform: translateY(0);
+    width: 100%
+  }
 }
 
 @media (max-width: 768px) {
-  nav ul li {
-    display: none;
-  }
-  
-  .shrink {
-    padding: 1.5rem 0;
-  }
-
   .hero {
     padding: 1rem 0;
   }
@@ -620,7 +714,6 @@ footer {
   }
 
   .hero .image img {
-    object-fit: cover;
     display: none
   }
 
@@ -673,6 +766,10 @@ footer {
     display: none;
   }
 
+  .hero .text .btn-container .btn {
+    font-size: .75rem;;
+  }
+
   .grid {
     display: block;
   }
@@ -702,15 +799,12 @@ footer {
 }
 
 @media (max-width: 400px) {
-  .card {
-    padding: 2rem 0;
+  .sobre .btn-container {
+    width: 90%;
   }
 
-  .sobre {
-    padding: 4rem 1rem;
-  }
-
-  .sobre img {
-    width: 300px;
+  .hero .text .btn-container .btn {
+    padding: 1rem .5rem;
+    font-size: .75rem;
   }
 }
